# Qwen3_arena

./: .env.example  .gitignore  EVALUATION_FIXES.md  FEEDBACK_FIXES_ROUND2.md  FEEDBACK_FIXES_ROUND3.md  FEEDBACK_FIXES_ROUND4.md  FEEDBACK_FIXES_ROUND5.md  FIXES_APPLIED.md  HYPERLIQUID_FIXES_COMPLETE.md  HYPERLIQUID_MIGRATION_COMPLETE.md  HYPERLIQUID_MIGRATION_STATUS.md  README.md  Start.bat  Start.command  cookies.txt  pyproject.toml
backend/app/: config.py  main.py  schemas.py
backend/app/adapters/: bitget_client.py  hyperliquid_client.py
backend/app/services/: contract_meta.py  orders.py  price_feed.py  roster.py  translators.py
backend/app/utils/: branding.py
frontend/public/: gate.css  gate.html  gate.js  index.html  main.js  styles.css
qwen3_arena.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
