[project]
name = "poke-bitget-adventure"
version = "0.1.0"
description = "Kid-friendly Pokemon-themed Bitget trading adventure interface"
authors = [{name = "Trainer Codex"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.25",
    "pydantic>=2.5",
    "pydantic-settings>=2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23"
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
