[project]
name = "qwen3-arena"
version = "0.1.0"
description = "Qwen3 Arena - Hyperliquid trading interface with AI-powered insights"
authors = [{name = "Qwen3 Arena Team"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.25",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "hyperliquid-python-sdk>=0.4.0",
    "eth-account>=0.10.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23"
]

[tool.setuptools]
packages = ["backend"]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
